prevent security vulnerabilities from external links

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -32,7 +32,7 @@
           </li>
           <li>
             <a  href="https://www.github.com/aziznrrn" target="_blank"
-                class="nav-link">About Us</a>
+                rel="noreferrer" class="nav-link">About Us</a>
           </li>
         </ul>
         <button id="btn-close" aria-label="close menu">&#10005;</button>
